--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.4",
     "@reduxjs/toolkit": "^1.8.2",
     "aos": "^2.3.4",
     "axios": "^0.27.2",
     "framer-motion": "^6.3.11",
+    "material-ui-phone-number": "^3.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-phone-input-2": "^2.15.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^5.3.3",
     "react-scripts": "5.0.1",
