--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@reduxjs/toolkit": "^1.8.2",
     "aos": "^2.3.4",
     "axios": "^0.27.2",
+    "formik": "^2.2.9",
     "framer-motion": "^6.3.11",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -19,7 +20,8 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.4",
     "use-local-storage": "^2.3.6",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
