--- a/package.json
+++ b/package.json
@@ -5,15 +5,19 @@
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@faker-js/faker": "^7.4.0",
     "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.4",
     "@reduxjs/toolkit": "^1.8.2",
     "aos": "^2.3.4",
     "axios": "^0.27.2",
+    "chart.js": "^3.9.1",
+    "faker": "^6.6.6",
     "formik": "^2.2.9",
     "framer-motion": "^6.3.11",
     "react": "^17.0.2",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "^17.0.2",
     "react-organizational-chart": "^2.1.1",
     "react-redux": "^8.0.2",
