--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "faker": "^6.6.6",
     "formik": "^2.2.9",
     "framer-motion": "^6.3.11",
+    "moment": "^2.29.4",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^17.0.2",
     "react-organizational-chart": "^2.1.1",
+    "react-query": "^3.39.2",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
