--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^6.3.11",
     "moment": "^2.29.4",
     "react": "^17.0.2",
+    "react-auth-kit": "^2.4.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^17.0.2",
     "react-organizational-chart": "^2.1.1",
