--- a/package.json
+++ b/package.json
@@ -10,6 +10,13 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.4",
     "@reduxjs/toolkit": "^1.8.2",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.11.68",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
     "antd": "^4.23.2",
     "aos": "^2.3.4",
     "axios": "^0.27.2",
@@ -22,24 +29,18 @@
     "react-auth-kit": "^2.4.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
+    "react-form-builder2": "^0.14.0",
     "react-organizational-chart": "^2.1.1",
     "react-query": "^3.39.2",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.8.4",
     "react-toastify": "^9.0.4",
     "styled-components": "^5.3.5",
+    "typescript": "^4.8.4",
     "use-local-storage": "^2.3.6",
     "web-vitals": "^2.1.4",
-    "yup": "^0.32.11",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.11.68",
-    "@types/react": "^18.0.21",
-    "@types/react-dom": "^18.0.6"
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
