--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     ]
   },
   "devDependencies": {
+    "@types/aos": "^3.0.4",
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.1.8"
