--- a/.env
+++ b/.env
@@ -1,5 +1,3 @@
-REACT_APP_LEAVE_BASE_URL = "http://localhost:8080/leave-requests"
-REACT_APP_SURVEY_BASE_URL = "http://localhost:8080/surveys"
-REACT_APP_PAYROLL_BASE_URL = "http://localhost:8080/payroll"
-REACT_APP_LOAN_BASE_URL = "http://localhost:8080/loans"
-REACT_APP_USER_BASE_URL = "http://localhost:8080/users"
+REACT_APP_UTILITY_BASE_URL = "http://api.hcmatrix.com/v1/utility"
+REACT_APP_AUTHENTICATION_BASE_URL = "http://api.hcmatrix.com/v1/authentication"
+REACT_APP_NOTIFICATION_BASE_URL = "http://api.hcmatrix.com/v1/notification"
