--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 REACT_APP_UTILITY_BASE_URL = "https://api.hcmatrix.com/v1/utility"
 REACT_APP_AUTHENTICATION_BASE_URL = "https://api.hcmatrix.com/v1/authentication"
 REACT_APP_NOTIFICATION_BASE_URL = "https://api.hcmatrix.com/v1/notification"
+REACT_APP_SESSION_TIME = "120"
