--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "typescript": "^4.8.4",
     "use-local-storage": "^2.3.6",
     "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5",
     "yup": "^0.32.11"
   },
   "scripts": {
