moved the refresh token times to be in env variable

--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ REACT_APP_UTILITY_BASE_URL = "https://api.hcmatrix.com/v1/utility"
 REACT_APP_AUTHENTICATION_BASE_URL = "https://api.hcmatrix.com/v1/authentication"
 REACT_APP_NOTIFICATION_BASE_URL = "https://api.hcmatrix.com/v1/notification"
 REACT_APP_SESSION_TIME = "120"
+REACT_APP_REFRESH_TOKEN_EXPIRY_TIME = "15"
+REACT_APP_REFRESH_TOKEN_INTERVAL_TIME = "10"
