--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^0.27.2",
     "chart.js": "^3.9.1",
     "faker": "^6.6.6",
+    "firebase": "^9.21.0",
     "formik": "^2.2.9",
     "framer-motion": "^6.3.11",
     "moment": "^2.29.4",
