--- a/.env
+++ b/.env
@@ -5,3 +5,11 @@ REACT_APP_SESSION_TIME = "120"
 REACT_APP_TOKEN_EXPIRY_TIME = "4"
 REACT_APP_REFRESH_TOKEN_INTERVAL_TIME = "2" #should be the main thing to determine how long user should stay logged in
 
+REACT_APP_FIREBASE_apiKey= "AIzaSyBlCdkKZN6Qyw7kICLzgRDGuTkiF440P84",
+REACT_APP_FIREBASE_authDomain= "hcmatrix3.firebaseapp.com",
+REACT_APP_FIREBASE_projectId= "hcmatrix3",
+REACT_APP_FIREBASE_storageBucket= "hcmatrix3.appspot.com",
+REACT_APP_FIREBASE_messagingSenderId= "758826222289",
+REACT_APP_FIREBASE_appId= "1=758826222289:web:85412fd2d82731ef27bbf0",
+REACT_APP_FIREBASE_measurementId= "G-92HNXK7GX8",
+REACT_APP_FIREBASE_vapidKey="BNksQuoGE7iAnui3NM6TeLKazyCTI25mwZzNMPTqmWu9vRDfl-19AeyxAoS7z9tVfl14tJob9bLVNNFhof9kcSc"
