--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 REACT_APP_UTILITY_BASE_URL = "https://api.hcmatrix.com/v1/utility"
 REACT_APP_AUTHENTICATION_BASE_URL = "https://api.hcmatrix.com/v1/authentication"
 REACT_APP_NOTIFICATION_BASE_URL = "https://api.hcmatrix.com/v1/notification"
+REACT_APP_PAYROLL_BASE_URL = "https://api.hcmatrix.com/v1/payroll"
 REACT_APP_SESSION_TIME = "120"
 REACT_APP_TOKEN_EXPIRY_TIME = "4"
 REACT_APP_REFRESH_TOKEN_INTERVAL_TIME = "2" #should be the main thing to determine how long user should stay logged in
