--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "react-query": "^3.39.2",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-spinners": "^0.13.6",
     "react-toastify": "^9.0.4",
     "styled-components": "^5.3.5",
