chore: sets up cost centre page & transactions

--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
+
+
+
 REACT_APP_UTILITY_BASE_URL = "https://api.hcmatrix.com/v1/utility"
 REACT_APP_AUTHENTICATION_BASE_URL = "https://api.hcmatrix.com/v1/authentication"
 REACT_APP_NOTIFICATION_BASE_URL = "https://api.hcmatrix.com/v1/notification"
@@ -14,3 +17,8 @@ REACT_APP_FIREBASE_messagingSenderId= "758826222289",
 REACT_APP_FIREBASE_appId= "1=758826222289:web:85412fd2d82731ef27bbf0",
 REACT_APP_FIREBASE_measurementId= "G-92HNXK7GX8",
 REACT_APP_FIREBASE_vapidKey="BNksQuoGE7iAnui3NM6TeLKazyCTI25mwZzNMPTqmWu9vRDfl-19AeyxAoS7z9tVfl14tJob9bLVNNFhof9kcSc"
+
+
+# PayStack
+REACT_APP_PAYSTACK_TEST_PUBLIC_KEY="pk_test_580fcfcdab258c7eaaa07a41e145cb08809c68a4"
+REACT_APP_PAYSTACK_LIVE_PUBLIC_KEY=""
