--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^18.2.0",
     "react-form-builder2": "^0.14.0",
     "react-organizational-chart": "^2.1.1",
+    "react-paystack": "^4.0.3",
     "react-query": "^3.39.2",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
