--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.6",
+    "react-to-print": "^2.14.13",
     "react-toastify": "^9.0.4",
     "styled-components": "^5.3.5",
     "typescript": "^4.8.4",
