--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-form-builder2": "^0.14.0",
+    "react-multi-date-picker": "^4.4.0",
     "react-organizational-chart": "^2.1.1",
     "react-paystack": "^4.0.3",
     "react-query": "^3.39.2",
