chore(address): add geoapify package

--- a/.env
+++ b/.env
@@ -22,3 +22,7 @@ REACT_APP_FIREBASE_vapidKey="BNksQuoGE7iAnui3NM6TeLKazyCTI25mwZzNMPTqmWu9vRDfl-1
 # PayStack
 REACT_APP_PAYSTACK_TEST_PUBLIC_KEY="pk_test_580fcfcdab258c7eaaa07a41e145cb08809c68a4"
 REACT_APP_PAYSTACK_LIVE_PUBLIC_KEY=""
+
+
+# geolocation keys
+REACT_APP_GEOAPIFY_KEY = "6fa425b087344f80a7827b15dce9f274"
