--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-auth-kit": "^2.12.2",
+    "react-big-calendar": "^1.8.6",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-form-builder2": "^0.14.0",
@@ -67,6 +68,7 @@
   },
   "devDependencies": {
     "@types/aos": "^3.0.4",
+    "@types/react-big-calendar": "^1.8.8",
     "@types/styled-components": "^5.1.29",
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.18",
