--- a/.github/workflows/master_hcmatrixfrontend.yml
+++ b/.github/workflows/master_hcmatrixfrontend.yml
@@ -3,10 +3,11 @@
 
 name: Build and deploy Node.js app to Azure Web App - hcmatrixfrontend
 
+
 on:
   push:
     branches:
-      - master
+      - main
   workflow_dispatch:
 
 jobs:
@@ -19,19 +20,32 @@ jobs:
       - name: Set up Node.js version
         uses: actions/setup-node@v3
         with:
-          node-version: '20.x'
+          node-version: "18.x"
 
       - name: npm install, build, and test
         run: |
           npm install
           npm run build --if-present
           npm run test --if-present
-      
+      # Copy the web config for the project
+      - name: Copy web.config to be used online (azure)
+        run: |
+          cp deployment-config/Web.config dist/Web.config
+      # zip the build directory
+      - name: Zip Release
+
+        uses: TheDoctor0/zip-release@0.7.6
+        with:
+          # Filename for archive
+          filename: release.zip
+          # Base path for archive files
+          path: ./dist/*
+
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
           name: node-app
-          path: .
+          path: release.zip
 
   deploy:
     runs-on: ubuntu-latest
