--- a/.github/workflows/master_hcmatrixfrontend.yml
+++ b/.github/workflows/master_hcmatrixfrontend.yml
@@ -7,7 +7,7 @@ name: Build and deploy Node.js app to Azure Web App - hcmatrixfrontend
 on:
   push:
     branches:
-      - main
+      - master
   workflow_dispatch:
 
 jobs:
