--- a/.github/workflows/master_hcmatrixfrontend.yml
+++ b/.github/workflows/master_hcmatrixfrontend.yml
@@ -24,8 +24,7 @@ jobs:
 
       - name: npm install, build, and test
         run: |
-          npm install react-scripts --save
-          npm install
+          npm install -f
           npm run build --if-present
           npm run test --if-present
       # Copy the web config for the project
