--- a/.github/workflows/master_hcmatrixfrontend.yml
+++ b/.github/workflows/master_hcmatrixfrontend.yml
@@ -25,7 +25,7 @@ jobs:
       - name: npm install, build, and test
         run: |
           npm install -g yarn
-          yarn install
+          yarn install -y
           yarn run build --if-present
           yarn run test --if-present
       # Copy the web config for the project
