--- a/.github/workflows/master_hcmatrixfrontend.yml
+++ b/.github/workflows/master_hcmatrixfrontend.yml
@@ -23,9 +23,10 @@ jobs:
 
       - name: npm install, build, and test
         run: |
-          npm install
-          npm run build --if-present
-          npm run test --if-present
+          npm i -g yarn
+          yarn install
+          yarn run build --if-present
+          yarn run test --if-present
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
