--- a/.github/workflows/master_hcmatrixfrontend.yml
+++ b/.github/workflows/master_hcmatrixfrontend.yml
@@ -26,7 +26,7 @@ jobs:
           npm i -g yarn
           yarn install
           npx browserslist@latest --update-db
-          yarn run build --if-present
+          CI=false yarn run build 
           yarn run test --if-present
 
       - name: Zip artifact for deployment
