--- a/.github/workflows/master_hcmatrixfrontend.yml
+++ b/.github/workflows/master_hcmatrixfrontend.yml
@@ -27,7 +27,7 @@ jobs:
           yarn install
           npx browserslist@latest --update-db
           CI=false yarn run build 
-          yarn run test --if-present
+          yarn run test
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
