--- a/.github/workflows/master_hcmatrixfrontend.yml
+++ b/.github/workflows/master_hcmatrixfrontend.yml
@@ -28,8 +28,14 @@ jobs:
           npx browserslist@latest --update-db
           CI=false yarn run build 
           
-      - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+      - name: Zip Release
+
+        uses: TheDoctor0/zip-release@0.7.6
+        with:
+          # Filename for archive
+          filename: release.zip
+          # Base path for archive files
+          path: ./build/*
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
