--- a/.github/workflows/master_hcmatrixfrontend.yml
+++ b/.github/workflows/master_hcmatrixfrontend.yml
@@ -25,7 +25,6 @@ jobs:
         run: |
           npm i -g yarn
           yarn install
-          npx browserslist@latest --update-db
           CI=false yarn run build 
           
       - name: Zip artifact for deployment
@@ -35,7 +34,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: node-app
-          path: release.zip
+          path: build.zip
 
   deploy:
     runs-on: ubuntu-latest
@@ -60,5 +59,5 @@ jobs:
           app-name: 'hcmatrixfrontend'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE }}
-          package: release.zip
+          package: build.zip
           
