--- a/.github/workflows/master_hcmatrixfrontend.yml
+++ b/.github/workflows/master_hcmatrixfrontend.yml
@@ -34,7 +34,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: node-app
-          path: build.zip
+          path: release.zip
 
   deploy:
     runs-on: ubuntu-latest
@@ -59,5 +59,5 @@ jobs:
           app-name: 'hcmatrixfrontend'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE }}
-          package: build.zip
+          package: release.zip
           
