--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "use-local-storage": "^2.3.6",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "zod": "^3.23.8"
   },
   "scripts": {
     "start": "react-scripts start",
