chore: adds comments to google analytics creds

--- a/.env
+++ b/.env
@@ -28,5 +28,5 @@ REACT_APP_GOOGLE_GEO_CODE_API_KEY  = "AIzaSyBlCdkKZN6Qyw7kICLzgRDGuTkiF440P84"
 
 
 # Google Analytics
-# REACT_APP_GOOGLE_ANALYTICS_TRACKING_ID = "G-5Q13FDXMYF"
-REACT_APP_GOOGLE_ANALYTICS_TRACKING_ID = "G-V3L8X72X1W" 
+# REACT_APP_GOOGLE_ANALYTICS_TRACKING_ID = "G-5Q13FDXMYF" - one provided by company for use
+REACT_APP_GOOGLE_ANALYTICS_TRACKING_ID = "G-V3L8X72X1W"  # one being used in dev caasimedia
