--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "@types/node": "^16.11.68",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
-    "antd": "^4.23.2",
+    "antd": "5.18.0",
     "aos": "^2.3.4",
     "axios": "^0.27.2",
     "chart.js": "^3.9.1",
+    "dayjs": "^1.11.11",
     "exceljs": "^4.4.0",
     "faker": "^6.6.6",
     "firebase": "^9.21.0",
