--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "firebase": "^9.21.0",
     "framer-motion": "^6.3.11",
     "js-file-download": "^0.4.12",
+    "jspdf": "^2.5.1",
     "leaflet": "^1.9.4",
     "moment": "^2.29.4",
     "react": "^18.3.1",
