--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-simple-captcha": "^9.3.1",
+    "react-speech-recognition": "^3.10.0",
     "react-spinners": "^0.13.6",
     "react-to-print": "^2.14.13",
     "react-toastify": "^9.0.4",
@@ -79,6 +80,7 @@
     "@types/aos": "^3.0.4",
     "@types/leaflet": "^1.9.12",
     "@types/react-big-calendar": "^1.8.8",
+    "@types/react-speech-recognition": "^3.9.5",
     "@types/styled-components": "^5.1.29",
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.18",
