--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-auth-kit": "^2.12.2",
     "react-big-calendar": "^1.8.6",
     "react-chartjs-2": "^4.3.1",
+    "react-documents": "^1.2.1",
     "react-dom": "^18.3.1",
     "react-form-builder2": "^0.14.0",
     "react-ga4": "^2.1.0",
